--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>LOOM</h1>
-  <p>Streak: <span id="streak">0</span></p>
+  <h1 class="h1">Munch Match</h1>
+  <div id="streaks">
+    <p id="current-streak">Current Streak: 0</p>
+    <p id="longest-streak">Longest Streak: 0</p>
+  </div>
+  
+  
   <div id="game-board" class="grid-container"></div>
 
   <script src="script.js"></script>
