--- a/gameover.html
+++ b/gameover.html
@@ -26,6 +26,7 @@
 
     button {
       font-size: 1.5rem;
+      font-family: 'LoveDaysLove', cursive;
       padding: 12px 24px;
       background-color: #4CAF50;
       color: white;
