--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
   </style>
 </head>
 <body>
-  <h1>Mutch Match</h1>
+  <h1>Munch Match</h1>
 
   <button class="btn" onclick="window.location.href='index.html'">Play Game</button>
   <button class="btn" onclick="toggleRules()">Rules</button>
