--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
   <a id="help-button">❓</a>
   <div id="instructions">
     <h2>How to Play</h2>
-    <p>Each tile has 4 stacked images: 1 fruit, 1 vegetable, 1 protein, and 1 carb.</p>
-    <p>Click two tiles to try and match the top images.</p>
-    <p>Matched images disappear; keep matching to clear the board!</p>
-    <p>Your goal: clear all the tiles!</p>
+    <p>Match the same foods from each tile.</p>
+    <p>Each tile has a stack of four food types: fruit, vegetable, protein, and carb.</p>
+    <p>Keep matching to build your streak. Game ends when all tiles are empty!</p>
   </div>
 
   <div id="streaks">
