--- a/gameover.html
+++ b/gameover.html
@@ -47,7 +47,7 @@
   <script>
     function restartGame() {
       localStorage.removeItem('longestStreak');
-      window.location.href = "index.html";
+      window.location.href = "game.html";
     }
   </script>
   
